<resources>
    <string name="app_name">DoSomething</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_do_some_thing_login">DoSomeThingLogin</string>
    <string name="login_textview_login_facebookone">Log In with </string>
    <string name="login_textview_login_facebooktwo"><b>Facebook</b></string>
    <string name="login_textview_login_email">Or log in with your email</string>
    <string name="login_edittext_email">Email</string>
    <string name="login_edittext_password">Password</string>
    <string name="login_button_login_signin"><b>Sign In</b></string>
    <string name="login_button_login_back"><b>Back</b></string>
    <string name="login_textview_forgot_password">Forgot password?</string>
    <string name="login_textview_create_account">Create an Account</string>
    <string name="facebook_app_id">760087264113122</string>
    <string name="dosomething_apilink_string">http://wiztestinghost.com/dosomething/</string>
    <string name="indiacoder_dosomething_apilink_string">http://indiawebcoders.com/mobileapps/dosomething/</string>
    <string name="indiacoder_dosomething_live">http://128.199.130.137/dosomething/</string>
    <string name="dosomething_live">http://mobileapp.dosomethingapp.com/</string>
    <string name="dosomething_apilink_string_common">http://mobileapp.dosomethingapp.com/</string>
    <string name="dosomething_apilink_string_push">http://mobileapp.dosomethingapp.com/push/android.php?</string>
    <string name="dosomething_apilink_string_register">http://mobileapp.dosomethingapp.com/register?</string>
    <string name="dosomething_apilink_string_signin">http://mobileapp.dosomethingapp.com/signin?</string>
    <string name="dosomething_apilink_string_checkuser">http://mobileapp.dosomethingapp.com/checkuser?</string>
    <string name="dosomething_apilink_string_updateprofile">http://mobileapp.dosomethingapp.com/updateprofile?</string>
    <string name="dosomething_apilink_string_updatelocation">http://mobileapp.dosomethingapp.com/updatelocation?</string>
    <string name="dosomething_apilink_string_gethobbies">http://mobileapp.dosomethingapp.com/gethobbies?</string>
    <string name="dosomething_apilink_string_dosomethinglist">http://mobileapp.dosomethingapp.com/dosomethinglist?</string>
    <string name="dosomething_apilink_string_updatedosomething">http://mobileapp.dosomethingapp.com/updatedosomething?</string>
    <string name="dosomething_apilink_string_nearestusers">http://mobileapp.dosomethingapp.com/nearestusers?</string>
    <string name="dosomething_apilink_string_getuserdetails">http://mobileapp.dosomethingapp.com/getuserdetails?</string>
    <string name="dosomething_apilink_string_sendrequest">http://mobileapp.dosomethingapp.com/sendrequest?</string>
    <string name="dosomething_apilink_string_useraction">http://mobileapp.dosomethingapp.com/useraction?</string>
    <string name="dosomething_apilink_string_forgetpassword">http://mobileapp.dosomethingapp.com/forgetpassword?</string>
    <string name="dosomething_apilink_string_getconversation">http://mobileapp.dosomethingapp.com/getconversation?</string>
    <string name="dosomething_apilink_string_sendmessage">http://mobileapp.dosomethingapp.com/sendmessage?</string>
    <string name="dosomething_apilink_string_getchathistory">http://mobileapp.dosomethingapp.com/getchathistory?</string>
    <string name="dosomething_apilink_string_activity">http://mobileapp.dosomethingapp.com/activity?</string>
    <string name="dosomething_apilink_string_apidetails">http://mobileapp.dosomethingapp.com/apidetails?</string>
    <string name="dosomething_apilink_string_blockuser">http://mobileapp.dosomethingapp.com/blockuser?</string>
    <string name="dosomething_apilink_string_unmatch">http://mobileapp.dosomethingapp.com/cancelrequest?</string>
    <string name="dosomething_apilink_string_deleteconversation">http://mobileapp.dosomethingapp.com/deleteconversation?</string>
    <string name="dosomething_apilink_string_onlinestatus">http://mobileapp.dosomethingapp.com/onlinestatus?</string>
    <string name="dosomething_apilink_string_deleteimage">http://mobileapp.dosomethingapp.com/deleteprofileimage?</string>
    <string name="dosomething_apilink_string_checkrequeststatus">http://mobileapp.dosomethingapp.com/checkrequeststatus?</string>
    <string name="title_activity_create_account">Create_account</string>
    <string name="create_account_textview_signup_facebookone">Create an account using </string>
    <string name="create_account_textview_signup_facebooktwo"><b>Facebook</b></string>
    <string name="create_account_textview_signup_email">Or sign up with your email</string>
    <string name="create_account_button_signin">Have an account? Sign In</string>
    <string name="create_account_textview_terms">Terms of Use</string>
    <string name="create_account_textview_privacy_policy">Privacy Policy</string>
    <string name="create_account_button_create_account"><b>Create Your Account</b></string>
    <string name="create_account_button_create_account_text">By selecting this, you agree to our Terms of use and our Privacy Policy</string>
    <string name="create_account_button_back"><b>Back</b></string>
    <string name="title_activity_do_something_status">DoSomethingStatus</string>
    <string name="letsdosomething">Let\'s Do Something</string>
    <string name="custom_toolbar_textview_save">SAVE</string>
    <string name="custom_toolbar_textview_create">Create</string>
    <string name="title_activity_profile__page">Profile_Page</string>
    <string name="profile_page_textview_firstname">First Name</string>
    <string name="profile_page_edittext_firstname">First Name</string>
    <string name="profile_page_textview_lastname">Last Name</string>
    <string name="profile_page_edittext_lastname">Last Name</string>
    <string name="profile_page_textview_male">Male</string>
    <string name="profile_page_textview_female">Female</string>
    <string name="profile_page_textview_dateofbirth">Date of Birth</string>
    <string name="profile_page_textview_datepicker">DD / MM / YYYY</string>
    <string name="profile_page_textview_about_you">About You</string>
    <string name="profile_page_edittext_about_you">Write something about yourself here</string>
    <string name="profile_page_textview_hobbies">Your Interests and Hobbies</string>
    <string name="profile_page_textview_title">Your Profile</string>
    <string name="profile_page_textview_title_account">Account</string>
    <string name="profile_page_textview_email">Email</string>
    <string name="profile_page_edittext_email">Email</string>
    <string name="profile_page_textview_current_password">Current \nPassword</string>
    <string name="profile_page_textview_password_confirmation">Password\nConfirmation</string>
    <string name="profile_page_textview_password">Password</string>
    <string name="profile_page_edittext_current_password">Your new password</string>
    <string name="profile_page_edittext_password_confirmation">Confirm your new Password</string>
    <string name="profile_page_edittext_password">Current Password</string>
    <string name="profile_page_textview_title_notification">Notification</string>
    <string name="profile_page_textview_Logout">LOGOUT</string>
    <string name="profile_page_textview_deleteaccount">DELETE ACCOUNT</string>
    <string name="profile_page_textview_clearfilter">CLEAR FILTER</string>
    <string name="profile_page_textview_notification_message">New Messages</string>
    <string name="profile_page_textview_notification_match">Match</string>
    <string name="profile_page_textview_notification_sound">Sound</string>
    <string name="profile_page_textview_notification_vibration">Vibration</string>
    <string name="profile_page_button_terms">Terms of Use</string>
    <string name="profile_page_button_policy">Privacy Policy</string>
    <string name="custom_toolbar_textview_title"><b>DOSOMETHING</b></string>
    <string name="title_activity_hobbies">Hobbies</string>
    <string name="hobbies_textview_recreation">RECREATION</string>
    <string name="hobbies_textview_boardgames">BOARD GAMES</string>
    <string name="hobbies_textview_fishing">FISHING</string>
    <string name="hobbies_textview_gaming">GAMING</string>
    <string name="hobbies_textview_gardening">GARDENING</string>
    <string name="hobbies_textview_finance">FINANCE</string>
    <string name="hobbies_textview_pets">PETS</string>
    <string name="hobbies_textview_cat">CAT</string>
    <string name="hobbies_textview_dog">DOG</string>
    <string name="hobbies_textview_food">FOOD</string>
    <string name="hobbies_textview_bbq">BBQ</string>
    <string name="hobbies_textview_cooking">COOKING</string>
    <string name="hobbies_textview_fastfood">FAST FOOD</string>
    <string name="hobbies_textview_italianfood">ITALIAN FOOD</string>
    <string name="hobbies_textview_japanesefood">JAPANESE \n FOOD</string>
    <string name="hobbies_textview_koreanfood">KOREAN \n FOOD</string>
    <string name="hobbies_textview_arts">ARTS</string>
    <string name="hobbies_textview_guitar">GUITAR</string>
    <string name="hobbies_textview_paint">PAINTING</string>
    <string name="hobbies_textview_photography">PHOTOGRAPHY</string>
    <string name="hobbies_textview_piano">PIANO</string>
    <string name="hobbies_textview_violin">VIOLIN</string>
    <string name="hobbies_textview_subtitle">Tap to select your interests and hobbies</string>
    <string name="hobbies_textview_title">Your Interests and Hobbies</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hobbies_textview_empty" />
    <string name="friend_profile_textview_lets_do_something">Let\'s Do\nSomething!</string>
    <string name="friend_profile_textview_lets_do_requestsend">Request\nSent</string>
    <string name="status_TextView_running">RUNNING</string>
    <string name="status_TextView_beach">BEACH</string>
    <string name="status_TextView_cycling">CYCLING</string>
    <string name="status_TextView_movies">MOVIES</string>
    <string name="status_TextView_alcohol">ALCOHOL</string>
    <string name="status_TextView_meals">MEALS</string>
    <string name="status_TextView_coffee">COFFEE</string>
    <string name="status_TextView_shopping">SHOPPING</string>
    <string name="status_TextView_karoke">KARAOKE</string>
    <string name="status_TextView_gym">GYM</string>
    <string name="status_TextView_tennis">TENNIS</string>
    <string name="status_TextView_soccer">SOCCER</string>
    <string name="title_activity_do_something__friend_profile">DoSomething_Friend_profile</string>
    <string name="title_activity_maps">Map</string>
    <string name="notification_text">Location</string>
    <string name="gps_network_not_enabled">Please enable your location settings</string>
    <string name="network_not_enabled">Please enable your data connection</string>
    <string name="emailandpassword_error">Please enter valid email and password</string>
    <string name="profile_error">sessionexpried</string>
    <string name="open_location_settings">Open</string>
    <string name="dismiss">dismiss</string>
    <string name="Cancel">Cancel</string>
    <string name="dosomething_splashactivity_string_createanaccount">Create an Account</string>
    <string name="dosomething_splashactivity_string_signin">Sign In</string>
    <string name="account_create_confirmation"><![CDATA[By selecting this you agree to our \"Terms \n of Use\" and \"Privacy Policy\"]]></string>
    <string name="demo_min_label">Min</string>
    <string name="demo_max_label">Max</string>
    <string name="time_sample">17:45</string>
</resources>