<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ocs.hi.com.Create_account">

    <RelativeLayout
        android:id="@+id/dosmething_create_account_mainlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lite_white"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/create_account_textview_relativelayout_facebook"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/create_account_textview_signup_facebookone"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="32dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/create_account_textview_signup_facebookone"
                    android:textAllCaps="false"
                    android:textColor="@color/facebook_blue"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/create_account_textview_signup_facebooktwo"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_toEndOf="@+id/create_account_textview_signup_facebookone"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:paddingBottom="2dp"
                    android:paddingLeft="2dp"
                    android:text="@string/create_account_textview_signup_facebooktwo"
                    android:textAllCaps="false"
                    android:textColor="@color/facebook_blue"
                    android:textSize="14sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/create_account_textview_signup_email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/lite_white"
                android:gravity="left|center"
                android:paddingLeft="32dp"
                android:text="@string/create_account_textview_signup_email"
                android:textAllCaps="false"
                android:textColor="@color/red"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/create_account_edittext_email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/lite_white"
                android:hint="@string/login_edittext_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="32dp"
                android:singleLine="true"
                android:textColor="@color/hint_color"
                android:textColorHint="@color/hint_color"
                android:textSize="13sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@color/white" />

            <EditText
                android:id="@+id/create_account_edittext_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/lite_white"
                android:hint="@string/login_edittext_password"
                android:inputType="textPassword"
                android:paddingLeft="32dp"
                android:singleLine="true"
                android:textColor="@color/hint_color"
                android:textColorHint="@color/hint_color"
                android:textSize="13sp" />

            <LinearLayout
                android:id="@+id/create_account_layout_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/create_account_textview_create_account"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:background="@color/red"
                    android:gravity="center|bottom"
                    android:paddingBottom="5dp"
                    android:text="@string/create_account_button_create_account"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/create_account_textview_create_account_text"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:background="@color/red"
                    android:gravity="center|top"
                    android:text="@string/create_account_button_create_account_text"
                    android:textColor="@color/white"
                    android:textSize="9sp" />
            </LinearLayout>


            <Button
                android:id="@+id/create_account_button_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:text="@string/create_account_button_back"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/lite_black"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/create_account_textview_terms"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:background="@color/lite_black"
                        android:gravity="center"
                        android:paddingLeft="8dp"
                        android:text="@string/create_account_textview_terms"
                        android:textColor="@color/white"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/create_account_textview_privacy_policy"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/create_account_textview_terms"
                        android:background="@color/lite_black"
                        android:gravity="center"
                        android:paddingLeft="24dp"
                        android:text="@string/create_account_textview_privacy_policy"
                        android:textColor="@color/white"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/create_account_textview_signin"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="right"
                        android:background="@color/lite_black"
                        android:gravity="center"
                        android:paddingRight="8dp"
                        android:text="@string/create_account_button_signin"
                        android:textColor="@color/white"
                        android:textSize="11sp" />


                </RelativeLayout>


            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_progress_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:indeterminate="true"
            android:indeterminateOnly="false"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:scaleType="fitXY"
            android:id="@+id/image_walkthrough_account_create"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/walkthrough_create" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/layout_walkthrough_account_create"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
<LinearLayout
    android:background="@color/lite_blacktrans"
    android:layout_width="match_parent"
    android:layout_height="48dp"/>



        <LinearLayout
            android:background="@color/lite_blacktrans"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/walkthrough_account_create_imageView" />
        <TextView
            android:id="@+id/walkthrough_account_create_TextView"
            android:background="@drawable/walkthrough_border"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="Insert your email and password \nto 'Create your Account"
            android:layout_below="@+id/walkthrough_account_create_imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="42dp" />
        <ImageView
            android:id="@+id/walkthrough_account_create_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tuto_points"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="207dp" />
    </RelativeLayout>
</RelativeLayout>